complete the endpoints